After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760314 - gtkimcontextime.c: Silence gtk_style_context_set_state() warnings
gtkimcontextime.c: Silence gtk_style_context_set_state() warnings
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Win32
unspecified
Other Windows
: Normal normal
: ---
Assigned To: gtk-win32 maintainers
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-01-08 10:44 UTC by Fan, Chun-wei
Modified: 2016-01-08 15:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Windows/CJK IME (gtkimcontextime.c): Silence gtk_style_context_set_state() warnings (1.68 KB, patch)
2016-01-08 10:55 UTC, Fan, Chun-wei
none Details | Review
Windows/CJK IME (gtkimcontextime.c): Silence gtk_style_context_set_state() warnings (1.75 KB, patch)
2016-01-08 11:10 UTC, Fan, Chun-wei
committed Details | Review

Description Fan, Chun-wei 2016-01-08 10:44:45 UTC
Hi,

Since 3.19.x the GTK+ CSS APIs have been updated, which will require an update so that the the state passed into GtkStyleContext would be in line with what it expects.  Not doing so would cause a warning like the following be displayed when one is using a text-related widget (such as GtkEntry or GtkTextView) and is running the program on Windows with CJK IME installed and running:

(gtk3-demo-application.exe:47152): Gtk-WARNING **: State 0 for GtkTextView 0000000002BD2AA0 doesn't match state 160 set via gtk_style_context_set_state ()

I will attach a patch to remedy this.

With blessings, thank you!
Comment 1 Fan, Chun-wei 2016-01-08 10:55:48 UTC
Created attachment 318474 [details] [review]
Windows/CJK IME (gtkimcontextime.c): Silence gtk_style_context_set_state() warnings

Hi,

Here comes the patch, as I am hit by this warning, as a CJK Windows user...

With blessings, thank you!
Comment 2 Fan, Chun-wei 2016-01-08 11:10:15 UTC
Created attachment 318476 [details] [review]
Windows/CJK IME (gtkimcontextime.c): Silence gtk_style_context_set_state() warnings

oops, not exactly the correct patch I have in mind :|
Comment 3 Ignacio Casal Quinteiro (nacho) 2016-01-08 11:30:34 UTC
Review of attachment 318476 [details] [review]:

Looks good.
Comment 4 Fan, Chun-wei 2016-01-08 15:40:40 UTC
Hi Nacho,

Thanks for the really quick review, I have pushed the patch as d07f00d.

With blessings, thank you!